--- a/Challenge de ferias 2.0/View/Base.lproj/Main.storyboard
+++ b/Challenge de ferias 2.0/View/Base.lproj/Main.storyboard
@@ -54,19 +54,19 @@
                                                     <color key="textColor" red="0.5450980392" green="0.32156862749999998" blue="0.32156862749999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ecd-yp-Uwv">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ecd-yp-Uwv">
                                                     <rect key="frame" x="12" y="79" width="155.5" height="72"/>
                                                 </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="60i-TH-GCB">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="60i-TH-GCB">
                                                     <rect key="frame" x="319" y="79" width="82" height="34.5"/>
                                                 </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YJc-j0-pdn">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YJc-j0-pdn">
                                                     <rect key="frame" x="217.5" y="79" width="81.5" height="34.5"/>
                                                 </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZSr-NF-eD3">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZSr-NF-eD3">
                                                     <rect key="frame" x="217.5" y="120.5" width="81.5" height="34.5"/>
                                                 </imageView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6hk-nj-gBf">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6hk-nj-gBf">
                                                     <rect key="frame" x="319" y="120.5" width="82" height="34.5"/>
                                                 </imageView>
                                             </subviews>
@@ -145,7 +145,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mf6-wA-H5X">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mf6-wA-H5X">
                                 <rect key="frame" x="0.0" y="88" width="414" height="251"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ftn-CC-kld">
@@ -164,29 +164,29 @@
                                 <rect key="frame" x="0.0" y="454.5" width="414" height="407.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0qA-Tb-Cq6">
-                                    <size key="itemSize" width="160" height="165"/>
+                                    <size key="itemSize" width="200" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="Zjp-F0-c1U" customClass="PhotoCollectionViewCell" customModule="Challenge_de_ferias_2_0" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="160" height="165"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="160" height="165"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="366-34-wxT">
-                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="165"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="366-34-wxT">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="366-34-wxT" firstAttribute="top" secondItem="Zjp-F0-c1U" secondAttribute="top" id="5Wy-AK-TAc"/>
-                                            <constraint firstItem="366-34-wxT" firstAttribute="leading" secondItem="Zjp-F0-c1U" secondAttribute="leading" id="qUt-Z7-ZIA"/>
-                                            <constraint firstAttribute="trailing" secondItem="366-34-wxT" secondAttribute="trailing" id="qZZ-aR-ZP0"/>
-                                            <constraint firstAttribute="bottom" secondItem="366-34-wxT" secondAttribute="bottom" id="xts-Ea-ll0"/>
+                                            <constraint firstAttribute="trailing" secondItem="366-34-wxT" secondAttribute="trailing" id="RXp-0r-YgI"/>
+                                            <constraint firstItem="366-34-wxT" firstAttribute="leading" secondItem="Zjp-F0-c1U" secondAttribute="leading" id="SHH-UN-d4a"/>
+                                            <constraint firstItem="366-34-wxT" firstAttribute="top" secondItem="Zjp-F0-c1U" secondAttribute="top" id="pkW-7s-ehs"/>
+                                            <constraint firstAttribute="bottom" secondItem="366-34-wxT" secondAttribute="bottom" id="xgY-At-ilC"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="photoImageView" destination="366-34-wxT" id="xdN-bA-ovN"/>
